linked utils.js

--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
       <div id="generated-edit-card"></div>
     </main>
     <script src="./src/js/materialize.min.js"></script>
-    <script src="./src/js/localStorage.js"></script>
+    <script src="./src/js/utils.js"></script>
     <script src="./src/js/wfinances.js"></script>
     <script src="./src/js/app.js"></script>
   </body>
